feat: data initialization

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -5,3 +5,6 @@ spring:
     url: jdbc:postgresql://localhost:5432/todo
     password: ${DATABASE_PASSWORD}
     username: ${DATABASE_USER}
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
