--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,7 @@
 services:
   database:
     image: postgres
+    container_name: database
     env_file:
       - .env
     environment:
@@ -9,3 +10,12 @@ services:
       POSTGRES_DB: todo
     ports:
       - "5432:5432"
+  backend:
+    container_name: backend
+    build: ./backend
+    ports:
+      - "8080:8080"
+    env_file:
+      - .env
+    depends_on:
+      - database
