--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: todo
   datasource:
-    url: jdbc:postgresql://localhost:5432/todo
+    url: jdbc:postgresql://database:5432/todo
     password: ${DATABASE_PASSWORD}
     username: ${DATABASE_USER}
   jpa:
